Provisioning/app-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  labels: { app: backend , version: v1}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata: 
      labels:
        app: backend
      annotations: 
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: backend
          image: ghcr.io/release-engineering-group-13/app/backend:latest
          ports: [ containerPort: 8081 ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  labels: { app: backend , version: v2}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata: 
      labels:
        app: backend
      annotations: 
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: backend
          image: ghcr.io/release-engineering-group-13/app/backend:latest 
          ports: [ containerPort: 8081 ]
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - { name: http , port: 8081, targetPort: 8081 }
