Provisioning/app-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels: { app: frontend , version: v1}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations: 
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: frontend
          image: ghcr.io/release-engineering-group-13/app/frontend:latest
          ports: [ containerPort: 5000 ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  labels: { app: frontend , version: v2}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations: 
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: frontend
          image: ghcr.io/release-engineering-group-13/app/frontend-colorfull:latest 
          ports: [ containerPort: 5000 ]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - { name: http , port: 5000, targetPort: 5000 }
